tests/ui/params_not_yet.stderr
Error [E0003]: expected `:` after a parameter name, found `)`
  --> tests/ui/params_not_yet.lex:1:14
    |
  1 | fn greet(name) {
    |              ^
 Why: the structure here isn't what the compiler expected
 Fix: use `:` after a parameter name
